--- a/laravel_app/.env
+++ b/laravel_app/.env
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=development
+APP_ENV=local
 APP_KEY=base64:+inTBtcr0GtCjmmzNw36V6HzkHMWtoartfUb+SHK584=
 APP_DEBUG=true
 APP_URL=http://localhost
@@ -9,7 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=database
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=laravel-user
